# Can-Bus-Manager

./: .clang-format  .clang-tidy  .clang-uml  .gitignore  .gitmodules  CMakeLists.txt  README.md  start.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
doc/: CMakeLists.txt  Doxyfile.in
doc/res/: custom.css  header.html  mainpage.md
src/: main.cpp
src/app_root/delegate/: app_root_delegate.hpp
src/app_root/entry_point/: app_root.cpp  app_root.hpp  main.cpp  tab_factory.cpp  tab_factory.hpp
src/app_root/model/: app_root_model.hpp
src/app_root/view/: app_root_view.hpp
src/can_handler/can_communication_handler/: can_communication_handler.cpp  can_communication_handler.hpp  can_dbc_handler.cpp  can_dbc_handler.hpp  can_device_handler.hpp  can_raw_handler.cpp  can_raw_handler.hpp  i_can_parser.cpp  i_can_parser.hpp
src/can_handler/dbc_handler/: dbc_handler.hpp  dbc_parser.hpp  file_parser.hpp
src/common/widgets/: dbc_message_card.cpp  dbc_message_card.hpp  dbc_signal_row.cpp  dbc_signal_row.hpp
src/core/: core.hpp
src/core/dto/: DbcDtos.hpp  can_dto.hpp  can_frame.hpp  dbc_dto.hpp  decoded_signal.hpp  lifecycle_dto.hpp
src/core/enum/: DbcItemType.hpp  dbc_itemtype.hpp
src/core/event/: can_driver_event.hpp  can_event.hpp  dbc_event.hpp  event.hpp  lifecycle_event.hpp
src/core/interface/: IEventBroker.hpp  i_event_broker.hpp  i_lifecycle.hpp  i_tab_component.hpp
src/core/macro/: console_logging.hpp
src/core/widgets/: dbc_message_card.hpp  dbc_signal_row.hpp
src/dbc_file/: DbcComponent.hpp  dbc_component.cpp  dbc_component.hpp
src/dbc_file/delegate/: DbcDelegate.hpp  dbc_delegate.hpp  page_delegates.hpp
src/dbc_file/model/: DbcItem.hpp  DbcModel.hpp  dbc_item.hpp  dbc_model.hpp  dbc_roles.hpp
src/dbc_file/view/: DbcView.hpp  SubViews.hpp  dbc_view.hpp  proxies.hpp  searchable_filter_widgets.hpp  subviews.hpp
src/event_broker/: EventBroker.cpp  EventBroker.hpp  event_broker.cpp  event_broker.hpp
src/logging/: logging_component.cpp  logging_component.hpp
src/logging/delegate/: LoggingDelegate.cpp  LoggingDelegate.h  loggingDelegate.hpp  logging_delegate.cpp  logging_delegate.hpp
src/logging/model/: LogginModel.h  LoggingModel.cpp  LoggingModel.hpp  logging_model.hpp
src/logging/view/: LoggingView.cpp  LoggingView.h  LoggingView.hpp  logging_view.cpp  logging_view.hpp  message_selection_dialog.cpp  message_selection_dialog.hpp
src/monitoring/: monitoring_component.cpp  monitoring_component.hpp
src/monitoring/delegate/: monitoring_delegate.cpp  monitoring_delegate.hpp  signal_tree_delegate.cpp  signal_tree_delegate.hpp
src/monitoring/model/: monitoring_model.cpp  monitoring_model.hpp  signal_graph_model.cpp  signal_graph_model.hpp  signal_tree_model.cpp  signal_tree_model.hpp
src/monitoring/view/: graph_list_view.cpp  graph_list_view.hpp  monitoring_tab.cpp  monitoring_tab.hpp  monitoring_view.cpp  monitoring_view.hpp  signal_graph.cpp  signal_graph.hpp  signal_tree_view.cpp  signal_tree_view.hpp
src/sending/: sending_component.cpp  sending_component.hpp
src/sending/delegate/: SendingDelegate.cpp  SendingDelegate.h  SendingDelegate.hpp  sending_delegate.hpp
src/sending/model/: SendingModel.cpp  SendingModel.h  SendingModel.hpp  sending_model.hpp
src/sending/view/: SendingView.cpp  SendingView.h  SendingView.hpp  dbc_based_sending_subview.hpp  raw_sending_subview.hpp  sending_view.cpp  sending_view.hpp
tests/unit/app_root/: test_main.cpp
